MyDev/src/objects/CetificationQA__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <picklist>
            <picklistValues>
                <fullName>201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CetificationQA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CetificationQA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CetificationQA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>